<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What is your full name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Type here"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Who is your daddy?"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jamin"
        android:onClick="onDaddyClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Which songs do you like"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="September"
        android:onClick="onLikeSeptemberClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stayin' Alive"
        android:onClick="onLikeStayinClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello"
        android:onClick="onLikeHelloClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Celebration"
        android:onClick="onLikeCelebrationClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Careless Whisper"
        android:onClick="onLikeCarelessClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Baby"
        android:onClick="onLikeBabyClicked"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/september_verse"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/september_answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/september_answer_1"
            android:onClick="onSeptemberRadioClicked"/>
        <RadioButton android:id="@+id/september_answer_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/september_answer_correct"
            android:onClick="onSeptemberRadioClicked"/>
        <RadioButton android:id="@+id/september_answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/september_answer_2"
            android:onClick="onSeptemberRadioClicked"/>
        <RadioButton android:id="@+id/september_answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/september_answer_3"
            android:onClick="onSeptemberRadioClicked"/>
        <RadioButton android:id="@+id/september_answer_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/september_answer_4"
            android:onClick="onSeptemberRadioClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stayin_verse"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/stayin_answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stayin_answer_1"
            android:onClick="onStaynRadioClicked"/>
        <RadioButton android:id="@+id/stayin_answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stayin_answer_2"
            android:onClick="onStaynRadioClicked"/>
        <RadioButton android:id="@+id/stayin_answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stayin_answer_3"
            android:onClick="onStaynRadioClicked"/>
        <RadioButton android:id="@+id/stayin_answer_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stayin_answer_correct"
            android:onClick="onStaynRadioClicked"/>
        <RadioButton android:id="@+id/stayin_answer_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stayin_answer_4"
            android:onClick="onStaynRadioClicked"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="onSubmitClicked"/>

</LinearLayout>


</ScrollView>